Include non-resize-handle border in frame insets.

https://crrev.com/c/1149273 used a new Windows API,
GetSystemMetricsForDpi, to better handle multi-monitor high DPI frame
sizing scenarios.  However this API does not perpetuate a backwards-
compatibility behavior we were relying on before, where SM_CXSIZEFRAME
would include the non-resize-handle border space, SM_CXPADDEDBORDER,
(added in Vista) in addition to the resize handle space.  As a result,
we weren't accounting for that border space when calculating client area
insets.  This CL includes that space explicitly.

Bug: 873860
Bug: 874884
Bug: 876687
Change-Id: I19a9bde9c684e801cefb5f98162dba64ece295af
Reviewed-on: https://chromium-review.googlesource.com/1176824
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Robert Liao <robliao@chromium.org>
Commit-Queue: Taylor Bergquist <tbergquist@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585374}